--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Your Name"
 description              : "An amazing website."
-url                      : "https://heamns1122.github.io"
+url                      : ""
 baseurl                  : ""
 repository               : "heamns112/heamns1122.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
