--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Your Name"
 description              : "An amazing website."
-url                      : ""
+url                      : "heamns112/heamns112.github.io"
 baseurl                  : ""
 repository               : "heamns112/heamns112.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
