--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "Hello world"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
+name                     : "Na Hee Ju"
 description              : "An amazing website."
 url                      : "heamns112/heamns112.github.io"
 baseurl                  : ""
@@ -105,7 +105,7 @@ author:
   name             : "Your Name"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  location         : "Suwon"
   email            :
   links:
     - label: "Email"
