--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 locale                   : "en-US"
 title                    : "Hello world"
-title_separator          : "-"
+title_separator          : "Hi"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Na Hee Ju"
 description              : "An amazing website."
